@@ -1,7 +1,8 @@
-from __future__ import print_function
+
 import os
 import re
-from urlparse import parse_qs
+from urllib.parse import parse_qs
+from wptserve.utils import isomorphic_decode, isomorphic_encode
 
 def parse_range(header_value, file_size):
     if header_value is None:
@@ -19,18 +20,18 @@ def main(request, response):
         f.seek(0, os.SEEK_END)
         file_size = f.tell()
 
-        range_header = request.headers.get("range")
+        range_header = isomorphic_decode(request.headers.get(b"range"))
         req_start, req_last = parse_range(range_header, file_size)
         f.seek(req_start, os.SEEK_SET)
 
         response.add_required_headers = False
         response.writer.write_status(206 if range_header else 200)
-        response.writer.write_header("Accept-Ranges", "bytes")
-        response.writer.write_header("Content-Type", "video/mp4")
+        response.writer.write_header(b"Accept-Ranges", b"bytes")
+        response.writer.write_header(b"Content-Type", b"video/mp4")
         if range_header:
-            response.writer.write_header("Content-Range", "bytes %d-%d/%d" %
+            response.writer.write_header(b"Content-Range", b"bytes %d-%d/%d" %
                     (req_start, req_last, file_size))
-        response.writer.write_header("Content-Length", str(req_last - req_start + 1))
+        response.writer.write_header(b"Content-Length", isomorphic_encode(str(req_last - req_start + 1)))
         response.writer.end_headers()
 
         gap_start = int(file_size * 0.5)
