@@ -1,5 +1,16 @@
 2021-06-23  Chris Dumez  <cdumez@apple.com>
 
+        REGRESSION (r279169?): [MacOS] imported/w3c/web-platform-tests/html/semantics/embedded-content/the-video-element/video_timeupdate_on_seek.html is consistently failing.
+        https://bugs.webkit.org/show_bug.cgi?id=227312
+        <rdar://problem/79684170>
+
+        Unreviewed, update python script used by the test to be compatible with the new WPT tools (updated in r279169).
+
+        * web-platform-tests/html/semantics/embedded-content/the-video-element/timeout_on_seek.py:
+        (main):
+
+2021-06-23  Chris Dumez  <cdumez@apple.com>
+
         Update WPT tools from upstream
         https://bugs.webkit.org/show_bug.cgi?id=227255
 
